# Simple-Ray-Tracer

./: .gitignore  CMakeLists.txt  CMakeSettings.json  EXAMPLE-final-project-workload.xlsx  assignment.html  final-project-workload-final.xlsx  run.sh
data/: CornellBox-Mirror-Rotated.mtl  cube-textured.mtl  custom.mtl  monkey.mtl
framework/cmake/: CompilerWarnings.cmake
framework/include/framework/: image.h  mesh.h  window.h
framework/src/: image.cpp  mesh.cpp  shader.cpp  window.cpp
prebuilt/: Intersect_x64.lib  Intersect_x64_debug.lib  Intersect_x64_release.lib
src/: bounding_volume_hierarchy.cpp  bounding_volume_hierarchy.h  bvh_interface.cpp  bvh_interface.h  common.h  config.cpp  config.h  draw.cpp  draw.h  interpolate.cpp  interpolate.h  intersect.cpp  intersect.h  light.cpp  light.h  main.cpp  render.cpp  render.h  scene.cpp  scene.h  screen.cpp  screen.h  shading.cpp  shading.h  texture.cpp  texture.h
